sys/v4l2/gstv4l2videoenc.c
@@ -514,9 +514,10 @@ gst_v4l2_video_enc_handle_frame (GstVideoEncoder * encoder,
     /* Ensure input internal pool is active */
     if (!gst_buffer_pool_is_active (pool)) {
       GstStructure *config = gst_buffer_pool_get_config (pool);
+      guint min = MAX (self->v4l2output->min_buffers, GST_V4L2_MIN_BUFFERS);
+
       gst_buffer_pool_config_set_params (config, self->input_state->caps,
-          self->v4l2output->info.size, self->v4l2output->min_buffers,
-          self->v4l2output->min_buffers);
+          self->v4l2output->info.size, min, min);
 
       /* There is no reason to refuse this config */
       if (!gst_buffer_pool_set_config (pool, config))
